Bug 303086 - UI formatting problems in KMail Quick Search Bar
Summary: UI formatting problems in KMail Quick Search Bar
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.9 pre
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-06 02:18 UTC by Unknown
Modified: 2012-07-06 19:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2012-07-06 02:18:17 UTC
When the Quick Search Bar is enabled, the sizes of its elements are suboptimal. The search field is very small, while the category drop-down bar is very long:

http://imgur.com/xsWW6

When the Quick Search Bar is turned off (Ctrl+H), the message list column gains wide margins on either side:

http://imgur.com/DE09c


Reproducible: Always

Steps to Reproduce:
1. Observer the Quick Search Bar.
2. Press Ctrl+H to show/hide the bar, and observe the large margins.


Expected Results:  
The search field should occupy most of the width, while the dropdown should be small. When the Quick Search Bar is hidden, the message list should not gain margins.

steve@x1:~$ lsb_release -a
No LSB modules are available.
Distributor ID: Ubuntu
Description:    Ubuntu quantal (development branch)
Release:        12.10
Codename:       quantal

steve@x1:~$ uname -a
Linux x1 3.5.0-2-generic #2-Ubuntu SMP Tue Jun 26 14:11:06 UTC 2012 x86_64 x86_64 x86_64 GNU/Linux


steve@x1:~$ kde4-config -v
Qt: 4.8.2
KDE Development Platform: 4.8.90 (4.8.90)
kde4-config: 1.0
Comment 1 Laurent Montel 2012-07-06 06:18:58 UTC
do you have a big word in this list ?
Comment 2 Hrvoje Senjan 2012-07-06 09:41:23 UTC
I can confirm the seccond issue (Quick search bar disabled) with master:
http://i.imgur.com/TJlYT.png
With Quick Search bar , everything looks OK:
http://i.imgur.com/WIiRi.png
Laurent, didn't get what you mean?
Comment 3 Laurent Montel 2012-07-06 10:01:39 UTC
comment 2 : Ok for bug ui I know why and will fix it soon.
Comment 4 Laurent Montel 2012-07-06 11:02:01 UTC
Git commit 67a36fedd8432aec11a520ff52592348dd405f30 by Montel Laurent.
Committed on 06/07/2012 at 13:01.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix hide lock button

M  +1    -0    messagelist/core/widgetbase.cpp

http://commits.kde.org/kdepim/67a36fedd8432aec11a520ff52592348dd405f30
Comment 5 Hrvoje Senjan 2012-07-06 15:36:21 UTC
Confirming that the 2nd issue is gone, don't know about the first, as i did not experiened it
http://i.imgur.com/IqzBs.png
Comment 6 Laurent Montel 2012-07-06 16:23:58 UTC
Git commit e5a1c35f55c467ba75aa0b281b3224a12698f9ef by Montel Laurent.
Committed on 06/07/2012 at 18:22.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 303086 - UI formatting problems in KMail Quick Search Bar

Limit maximize size of combobox
FIXED-IN: 4.8.5

M  +1    -0    messagelist/core/widgetbase.cpp

http://commits.kde.org/kdepim/e5a1c35f55c467ba75aa0b281b3224a12698f9ef
Comment 7 Laurent Montel 2012-07-06 16:26:10 UTC
Git commit fe5efe29fce55f9618fbb64657ff357f1efe8519 by Montel Laurent.
Committed on 06/07/2012 at 18:22.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 303086 - UI formatting problems in KMail Quick Search Bar

Limit maximize size of combobox
FIXED-IN: 4.8.5
(cherry picked from commit e5a1c35f55c467ba75aa0b281b3224a12698f9ef)

Conflicts:

	messagelist/core/widgetbase.cpp

M  +1    -0    messagelist/core/widgetbase.cpp

http://commits.kde.org/kdepim/fe5efe29fce55f9618fbb64657ff357f1efe8519
Comment 8 Unknown 2012-07-06 16:36:15 UTC
Regarding the first issue... yes, in fact, I do have a very long item in this list. When I imported a calendar file from Google calendar, all items included a long category string containing some pointer to a Google schema. I deleted that category in KOrganizer, but this category appears to have also made its way into KMail. Need to find out how to delete it from there, too.
Comment 9 Unknown 2012-07-06 19:27:48 UTC
Found it. When I deleted that long-string category and restarted KMail, the search field became much wider and the button shrank.

Thanks for the tip, and for fixing the bug in the second issue.