Fix Bug 303086 - UI formatting problems in KMail Quick Search Bar

Limit maximize size of combobox

BUG: 303086
FIXED-IN: 4.8.5